Refactor ByteBuf utilities and introduce session attribute handling.
Centralized ByteBuf operations into ByteBufUtils and replaced duplicated implementations across the codebase with utility methods, improving code modularity and maintainability. Additionally, added SessionAttributeHandler and related components for managing session attributes, with support for configuring "futures" behavior. Introduced SessionService for session management and initialized it during service registration.